--- a/datacollector/src/test/resources/test-application.properties
+++ b/datacollector/src/test/resources/test-application.properties
@@ -31,5 +31,6 @@ rabbitmq.routing.key.meteringpoints=energy-meteringpoints-routing-key
 
 spring.jackson.serialization.write-dates-as-timestamps=false
 
-# Ruta de los archivos de configuración
 external.config.path=H:\\Mi unidad\\UOC\\13oSemestre\\TFG\\Workspace\\energytracker\\datacollector\\src\\main\\config\\config.ini
+
+demo.init=${DEMO_INIT:true}
