--- a/userservice/src/test/resources/test-application.properties
+++ b/userservice/src/test/resources/test-application.properties
@@ -34,3 +34,5 @@ application.security.jwt.refresh-token.expiration-time=604800000
 
 logging.level.org.springframework.core.env=DEBUG
 logging.level.org.springframework.boot.context.properties=DEBUG
+
+demo.init=false
