--- a/datacollector/src/main/resources/application.properties
+++ b/datacollector/src/main/resources/application.properties
@@ -26,3 +26,4 @@ external.meteringpoints.jsonfile.save.location=${EXTERNAL_METERINGPOINTS_JSONFIL
 
 simulation.without.stations=${SIMULATION_WITHOUT_STATIONS:true}
 demo.init=${DEMO_INIT:true}
+demo.init.database.reading.months=${DEMO_INIT_DATABASE_READING_MONTHS:3}
