--- a/devicecatalog/src/test/resources/test-application.properties
+++ b/devicecatalog/src/test/resources/test-application.properties
@@ -1,18 +1,17 @@
 spring.application.name=devicecatalog
 
-spring.docker.compose.enabled=true
-spring.docker.compose.file=compose.test.yaml
+spring.docker.compose.enabled=false
 
 server.port=8080
 
-spring.datasource.url=jdbc:h2:file:./data/test_db
+spring.datasource.url=jdbc:h2:mem:test_db
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.h2.console.enabled=true
 
 spring.jpa.properties.hibernate.default_schema=devices
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.id.new_generator_mappings=true
 spring.jpa.open-in-view=false
 
@@ -23,3 +22,5 @@ spring.neo4j.security.hostname-verification-enabled=false
 spring.security.user.name=admin
 spring.security.user.password=admin
 spring.security.user.roles=ADMIN
+
+demo.init=false
