Implemented JWT authentication enhancements, updated SecurityConfig for authorization rules, improved JwtAuthenticationFilter and JwtService logic, added role-based access control, refined user model and controllers, and adjusted configurations for device catalog and user services.

--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -132,6 +132,7 @@ services:
       - EXTERNAL_CONFIG_PATH=config/config.ini
       - DEMO_INIT=true
       - DOCKER_COMPOSE_ENABLED=true
+      - JWT_SECRET=EG8Btg19LnnP9ympNkVNakFP0B20HPqIucqzExaeBVE=
     ports:
       - "8082:8082"
     depends_on:
@@ -167,6 +168,7 @@ services:
       - EXTERNAL_CONFIG_PATH=config/config.ini
       - DEMO_INIT=true
       - DOCKER_COMPOSE_ENABLED=true
+      - JWT_SECRET=EG8Btg19LnnP9ympNkVNakFP0B20HPqIucqzExaeBVE=
     ports:
       - "8080:8080"
     depends_on:
