--- a/consumptionservice/src/main/resources/application.properties
+++ b/consumptionservice/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.defer-datasource-initialization=false
 spring.sql.init.mode=always
 spring.sql.init.platform=postgresql
 spring.sql.init.schema-locations=classpath:schema.sql
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.default_schema=${SPRING_JPA_SCHEMA:consumptions}
 spring.jpa.properties.hibernate.id.new_generator_mappings=true
 spring.jpa.open-in-view=false
@@ -38,6 +38,8 @@ rabbitmq.exchange.new.meteringpoint=${RABBITMQ_EXCHANGE_NEW_METERINGPOINT:energy
 rabbitmq.routing.key.new.meteringpoint=${RABBITMQ_ROUTING_KEY_NEW_METERINGPOINT:energy-newmeteringpoint-routing-key}
 
 spring.jackson.serialization.write-dates-as-timestamps=false
+
+application.security.jwt.secret-key=${JWT_SECRET:EG8Btg19LnnP9ympNkVNakFP0B20HPqIucqzExaeBVE=}
 
 spring.security.user.name=${SPRING_SECURITY_USERNAME:admin}
 spring.security.user.password=${SPRING_SECURITY_PASSWORD:admin}
