--- a/userservice/src/main/resources/application.properties
+++ b/userservice/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.defer-datasource-initialization=false
 spring.batch.jdbc.initialize-schema=always
 spring.sql.init.mode=always
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.default_schema=${SPRING_JPA_SCHEMA:users}
 spring.jpa.properties.hibernate.id.new_generator_mappings=true
 spring.jpa.open-in-view=false
@@ -29,10 +29,10 @@ spring.security.user.name=${SPRING_SECURITY_USERNAME:admin}
 spring.security.user.password=${SPRING_SECURITY_PASSWORD:admin}
 spring.security.user.roles=${SPRING_SECURITY_ROLES:ADMIN}
 
-application.security.jwt.secret-key=${JWT_SECRET:default_secret_key}
+application.security.jwt.secret-key=${JWT_SECRET:EG8Btg19LnnP9ympNkVNakFP0B20HPqIucqzExaeBVE=}
 application.security.jwt.expiration-time=${JWT_EXPIRATION_TIME:86400000}
 application.security.jwt.refresh-token.expiration-time=${JWT_REFRESH_EXPIRATION_TIME:604800000}
 
-demo.init=${DEMO_INIT:true}
+demo.init=${DEMO_INIT:false}
 
 spring.docker.compose.enabled=false
