--- a/devicecatalog/src/main/resources/application.properties
+++ b/devicecatalog/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.defer-datasource-initialization=false
 spring.sql.init.mode=always
 spring.sql.init.platform=postgresql
 spring.sql.init.schema-locations=classpath:schema.sql
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.default_schema=${SPRING_JPA_SCHEMA:devices}
 spring.jpa.properties.hibernate.id.new_generator_mappings=true
 spring.jpa.open-in-view=false
@@ -33,6 +33,8 @@ spring.docker.compose.enabled=false
 spring.security.user.name=${SPRING_SECURITY_USERNAME:admin}
 spring.security.user.password=${SPRING_SECURITY_PASSWORD:admin}
 spring.security.user.roles=${SPRING_SECURITY_ROLES:ADMIN}
+
+application.security.jwt.secret-key=${JWT_SECRET:EG8Btg19LnnP9ympNkVNakFP0B20HPqIucqzExaeBVE=}
 
 external.config.path=${EXTERNAL_CONFIG_PATH:H:\\Mi unidad\\UOC\\13oSemestre\\TFG\\Workspace\\energytracker\\devicecatalog\\src\\main\\config\\config.ini}
 
