Add JWT authentication and security to the consumption service and device catalog; update controllers and services for consumption and energy meter handling

--- a/devicecatalog/pom.xml
+++ b/devicecatalog/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>com.oscartur</groupId>
 		<artifactId>energytracker</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath> <!-- Ruta al POM raíz -->
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>com.energytracker</groupId>
 	<artifactId>devicecatalog</artifactId>
