--- a/datacollector/src/main/resources/application.properties
+++ b/datacollector/src/main/resources/application.properties
@@ -27,3 +27,5 @@ external.meteringpoints.jsonfile.save.location=${EXTERNAL_METERINGPOINTS_JSONFIL
 simulation.without.stations=${SIMULATION_WITHOUT_STATIONS:true}
 demo.init=${DEMO_INIT:true}
 demo.init.database.reading.months=${DEMO_INIT_DATABASE_READING_MONTHS:3}
+
+cors.origin.url=${CORS_ORIGIN_URL:http://localhost:5173}
