--- a/devicecatalog/src/main/resources/application.properties
+++ b/devicecatalog/src/main/resources/application.properties
@@ -39,3 +39,5 @@ application.security.jwt.secret-key=${JWT_SECRET:EG8Btg19LnnP9ympNkVNakFP0B20HPq
 external.config.path=${EXTERNAL_CONFIG_PATH:H:\\Mi unidad\\UOC\\13oSemestre\\TFG\\Workspace\\energytracker\\devicecatalog\\src\\main\\config\\config.ini}
 
 demo.init=${DEMO_INIT:true}
+
+cors.origin.url=${CORS_ORIGIN_URL:http://localhost:5173}
