--- a/userservice/src/main/resources/application.properties
+++ b/userservice/src/main/resources/application.properties
@@ -36,3 +36,5 @@ application.security.jwt.refresh-token.expiration-time=${JWT_REFRESH_EXPIRATION_
 demo.init=${DEMO_INIT:false}
 
 spring.docker.compose.enabled=false
+
+cors.origin.url=${CORS_ORIGIN_URL:http://localhost:5173}
