--- a/consumptionservice/src/main/resources/application.properties
+++ b/consumptionservice/src/main/resources/application.properties
@@ -47,3 +47,4 @@ spring.security.user.roles=${SPRING_SECURITY_ROLES:ADMIN}
 
 external.config.path=${EXTERNAL_CONFIG_PATH:H:\\Mi unidad\\UOC\\13oSemestre\\TFG\\Workspace\\energytracker\\consumptionservice\\src\\main\\config\\config.ini}
 
+cors.origin.url=${CORS_ORIGIN_URL:http://localhost:5173}
