--- a/consumptionservice/src/main/resources/application.properties
+++ b/consumptionservice/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.application.name=${SPRING_APPLICATION_NAME:consumptionservice}
 
 server.port=${SERVER_PORT:8082}
 
+spring.docker.compose.enabled=${DOCKER_COMPOSE_ENABLED:false}
+
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
 
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/test_db}
